# moc-ass-2

./: .gitignore  pyproject.toml  q1.py  q2.py  q3.py  shell.nix  working.ipynb
